[package]
name = "firebase-rtdb"
version = "0.1.0"
edition = "2021"
description = "Firebase Realtime Database REST client for Rust — auth, read, write, patch, delete"
license = "MIT"
repository = "https://github.com/kab102395/firebase-rtdb-rs"
keywords = ["firebase", "rtdb", "realtime-database", "google", "async"]
categories = ["web-programming", "api-bindings", "database"]

[lib]
name = "firebase_rtdb"
crate-type = ["rlib"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
jsonwebtoken = "8"
thiserror = "1"