[package]
name = "rtdb-rs"
version = "0.2.2"
edition = "2021"
description = "Firebase Realtime Database REST client for Rust — auth, read, write, patch, delete"
license = "MIT"
repository = "https://github.com/kab102395/rtdb-rs"
keywords = ["firebase", "rtdb", "realtime-database", "google", "async"]
categories = ["web-programming", "api-bindings", "database"]

[lib]
name = "rtdb_rs"
crate-type = ["rlib"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
jsonwebtoken = "8"
thiserror = "1"